fix layout bug for mobile devices

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11305,26 +11305,6 @@ body,
   }
 }
 
-@media (min-width: 320px) and (max-width: 767.5px) {
-  .navbar-collapse ul {
-    height: 100vh;
-  }
-
-  .navbar::after {
-    content: "";
-    width: 100%;
-    height: 130%;
-    position: absolute;
-    bottom: -100%;
-    left: 0;
-    right: 0;
-    background: url(/images/linear-single.svg);
-    background-repeat: no-repeat;
-    background-size: 100% 130%;
-    transform: rotate(180deg);
-  }
-}
-
 #main-navbar-wrapper {
   padding-top: 2%;
   z-index: 1;
@@ -11476,11 +11456,10 @@ body,
   width: 100%;
   height: 100%;
   position: absolute;
-  bottom: -30%;
+  bottom: 0;
   left: 0;
   background: url(/images/linear-single.svg);
   background-repeat: no-repeat;
-  background-size: 100% 100%;
   transform: rotate(180deg);
 }
 
@@ -11568,13 +11547,13 @@ body,
 @media (min-width: 320px) and (max-width: 767.5px) {
   #what-we-do {
     text-align: center;
-    margin-bottom: 25%;
+    margin-bottom: 70%;
   }
 }
 
 @media (min-width: 767.5px) and (max-width: 1278.5px) {
   #what-we-do {
-    margin: 20% 0% 25% 0%;
+    margin: 30% 0% 50% 0%;
   }
 }
 
@@ -11616,34 +11595,21 @@ body,
   width: 100%;
   height: calc(100% + 1px);
   position: absolute;
-  top: -60%;
+  top: -40%;
   left: 0;
   background: url(/images/linear-single.svg);
   background-repeat: no-repeat;
-  background-size: 100% 100%;
 }
 
 @media (min-width: 320px) and (max-width: 767.5px) {
   #our-latest-works::before {
-    top: -60%;
+    top: -55%;
   }
 }
 
 @media (min-width: 1920px) {
   #our-latest-works::before {
     top: -75%;
-  }
-}
-
-@media (min-width: 320px) and (max-width: 767.5px) {
-  #our-latest-works::after {
-    content: "";
-    width: 100%;
-    height: 5%;
-    position: absolute;
-    top: -3%;
-    left: 0;
-    background-color: #3C0170;
   }
 }
 
@@ -11725,7 +11691,6 @@ body,
   transform: translate(-50%, -50%);
   background: url(/images/linear-double.svg);
   background-repeat: no-repeat;
-  background-size: 100% 100%;
 }
 
 #contact .text-wrapper,
