--- a/resources/sass/styles/_footer.scss
+++ b/resources/sass/styles/_footer.scss
@@ -30,7 +30,7 @@
         transform: translate(-50%, -50%);
         background: url(/images/linear-double.svg);
         background-repeat: no-repeat;
-        background-size: 100% 100%;
+        // background-size: 100% 100%;
     }
 
     .text-wrapper,
