--- a/resources/sass/styles/_hero.scss
+++ b/resources/sass/styles/_hero.scss
@@ -23,11 +23,11 @@
         width: 100%;
         height: 100%;
         position: absolute;
-        bottom: -30%;
+        bottom: 0;
         left: 0;
         background: url(/images/linear-single.svg);
         background-repeat: no-repeat;
-        background-size: 100% 100%;
+        // background-size: 100% 100%;
         transform: rotate(180deg);
 
         @media (min-width: 320px) and (max-width: 767.5px) {
