--- a/resources/sass/styles/_navbar.scss
+++ b/resources/sass/styles/_navbar.scss
@@ -1,25 +1,5 @@
 @import '../variables';
 
-@media (min-width: 320px) and (max-width: 767.5px) {
-    .navbar-collapse ul {
-        height: 100vh;
-    }
-
-    .navbar::after {
-        content: "";
-        width: 100%;
-        height: 130%;
-        position: absolute;
-        bottom: -100%;
-        left: 0;
-        right: 0;
-        background: url(/images/linear-single.svg);
-        background-repeat: no-repeat;
-        background-size: 100% 130%;
-        transform: rotate(180deg);
-    }
-}
-
 #main-navbar-wrapper {
     padding-top: 2%;
     z-index: 1;
