--- a/resources/sass/styles/_what_we_do.scss
+++ b/resources/sass/styles/_what_we_do.scss
@@ -3,11 +3,11 @@
 
     @media (min-width: 320px) and (max-width: 767.5px) {
         text-align: center;
-        margin-bottom: 25%;
+        margin-bottom: 70%;
     }
 
     @media (min-width: 767.5px) and (max-width: 1278.5px) {
-        margin: 20% 0% 25% 0%;
+        margin: 30% 0% 50% 0%;
     }
 
     .services {
